aws-migration/le-migration/13-minio/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: minio
  labels:
    app: minio
    project: linkedeye
    environment: prod
